network-policies/gb-redis-slave.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: guestbook-redis
      role: slave
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: guestbook-redis
        role: slave
        tier: backend
    spec:
      containers:
      - name: slave
        image: gcr.io/google_samples/gb-redisslave:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379


---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: guestbook-redis
    role: slave
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: guestbook-redis
    role: slave
    tier: backend
